--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
         - name: node-example
-          image: huseyinbabal/node-example
+          image: juniyadi/express-demo
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
