--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,17 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: node-example-deployment
+  name: express-demo
 spec:
-  replicas: 1
+  replicas: 3
+  selector:
+    matchLabels:
+      app: express-demo
   template:
     metadata:
       labels:
-        app: node-example
+        app: express-demo
     spec:
       containers:
-        - name: node-example
+        - name: app
           image: juniyadi/express-demo
-          imagePullPolicy: Always
           ports:
-            - containerPort: 3000
+            - containerPort: 4000
+          env:
+            - name: PORT
+              value: 4000
+          imagePullPolicy: Always
