--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,14 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: node-example
-  labels:
-    app: node-example
+  name: express-demo
 spec:
   selector:
-    app: node-example
+    app: express-demo
   ports:
-    - port: 3000
-      protocol: TCP
-      nodePort: 30001
+    - port: 80
+      targetPort: 4000
   type: LoadBalancer
