--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,9 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: express-demo
+  name: ingress-express-demo
   annotations:
-    kubernetes.io/ingress.class: haproxy
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
     - host: express.demo.juniyadi.id
@@ -14,6 +15,6 @@ spec:
 
             backend:
               service:
-                name: express-demo
+                name: svn-express-demo
                 port:
                   number: 4000
