--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: juniyadi/express-demo
+          image: juniyadi/express-demo:latest
           ports:
             - containerPort: 4000
           env:
