--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,9 +1,11 @@
-apiVersion: apps/v1
+apiVersion: extensions/v1
 kind: Deployment
 metadata:
   name: express-demo
+  labels:
+    app: express-demo
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: express-demo
@@ -13,11 +15,19 @@ spec:
         app: express-demo
     spec:
       containers:
-        - name: app
-          image: juniyadi/express-demo:latest
-          ports:
-            - containerPort: 4000
-          env:
-            - name: PORT
-              value: "4000"
-          imagePullPolicy: Always
+      - resources:
+          limits:
+            cpu: 100m
+            memory: 100Mi
+          requests:
+            cpu: 100m
+            memory: 100Mi
+      - name: express-demo
+        image: nginx
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 4000
+          protocol: TCP
+        env:
+        - name: PORT
+          value: "4000"
