--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,14 +7,14 @@ metadata:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-    - host: express.demo.juniyadi.id
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
+  - host: express.demo.juniyadi.id
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
 
-            backend:
-              service:
-                name: svn-express-demo
-                port:
-                  number: 4000
+        backend:
+          service:
+            name: express-demo
+            port:
+              number: 4000
