--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,6 +21,13 @@ spec:
         ports:
         - containerPort: 4000
           protocol: TCP
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 500Mi
+          requests:
+            cpu: 500m
+            memory: 250Mi
         env:
         - name: PORT
           value: "4000"
