--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
 spec:
   rules:
   - host: express.demo.juniyadi.id
