--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -6,7 +6,11 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "X-Real-IP $remote_addr";
       more_set_headers "X-Forwarded-For $http_x_forwarded_for";
+      more_set_headers "X-Forwarded-Proto $scheme";
+      more_set_headers "X-Forwarded-Host $host";
+
 spec:
   rules:
   - host: express.demo.juniyadi.id
